--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,10 @@ button:focus {
     outline: none;
 }
 
+.container {
+    max-width: 1140px;
+}
+
 @media (min-width: 1200px) {
     .container {
         max-width: 1140px;
@@ -114,12 +118,10 @@ button:focus {
 .section__title h2 {
     font-size: 40px;
     font-weight: 700;
-    color: #fff;
 }
 
 .section__title p {
-    font-size: 32px;
-    color: #fff;
+    font-size: 22px;
     max-width: 1100px;
     margin: 20px auto 0px;
 }
@@ -302,7 +304,6 @@ header {
     margin: 0 auto;
 }
 
-
 .why-choose {
     background-image: url(../images/why-choose-bg.jpg);
     background-size: cover;
@@ -310,4 +311,174 @@ header {
     background-repeat: no-repeat;
 }
 
+.why-choose__box {
+    background-color: #fff;
+    max-width: 742px;
+    border-radius: 18px;
+    padding: 50px 30px;
+}
+
+.why-choose__box h2 {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.why-choose__box p {
+    font-size: 20px;
+    color: #5C5C5C;
+}
+
+.why__list {
+    margin-top: 50px;
+}
+
+.why__item {
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    gap: 50px;
+}
+
+.why__item:not(:first-child) {
+    margin-top: 50px;
+}
+
+.why__item .__icon {
+    width: 109px;
+    height: 109px;
+    border-radius: 50%;
+    background-color: #FE9203;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.why__item .__icon img {
+    width: auto;
+    max-width: 44px;
+}
+
+.why__item .__text {
+    flex: 1;
+    padding-top: 6px;
+    text-align: left;
+}
+
+.why__item .__text h4 {
+    font-size: 24px;
+    color: #000364;
+    margin-bottom: 10px;
+}
+
+.why__item .__text p {
+    font-size: 18px;
+}
+
+.order__item {
+    box-shadow: 2px 7px 7px 0px #00000026;
+    border: 0.75px solid #CFCFCF;
+    border-radius: 12px;
+    padding: 16px;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.view__number {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 14px;
+    color:#3D3D3D;
+    bottom: 16px;
+    right: 16px;
+}
+
+.view__number img {
+    width: auto;
+    max-width: 18px;
+}
+
+.order__item .thumb {
+    width: 100%;
+    overflow: hidden;
+}
+
+.order__item .thumb a:hover img {
+    transform: scale(1.1);
+}
+
+.order__item .thumb a img {
+    height: 100%;
+    object-fit: cover;
+    transition: 0.4s;
+    height: 324px;
+}
+
+.order__item .title {
+    padding: 16px 0px 13px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.order__item .title h3 a {
+    display: inline-flex;
+    flex-wrap: wrap;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.order__item .title h3 a small {
+    display: block;
+    width: 100%;
+    color: #878787;
+    font-size: 16px;
+    padding-top: 3px;
+}
+
+.order__item .title span {
+    background-color: #FE9203;
+    border-radius: 6px;
+    padding: 4px 5px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    white-space: nowrap;
+}
+
+.more-info__list {
+    padding-top: 12px;
+    border-top: 1px solid #DFDFDF;
+    position: relative;
+
+    padding-right: 40px;
+}
+
+.more-info__list li {
+    display: flex;
+    align-items: flex-start;
+    color: #3D3D3D;
+    font-size: 14px;
+}
+
+.more-info__list li:not(:first-child) {
+    margin-top: 6px;
+}
+
+.more-info__list li .__icon {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 14px;
+    width: 170px;
+}
+
+.more-info__list li .__icon img {
+    width: auto;
+    max-width: 12px;
+}
 
