--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,9 +127,45 @@ button:focus {
 }
 
 .section-pd {
-    padding: 75px 0px;
+    padding: 80px 0px;
 }
 
+.btn-site {
+    display: inline-flex;
+    align-items: center;
+    gap: 15px;
+    padding: 7px 7px 7px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    background-color: #FE9203;
+    border-radius: 73px;
+    position: relative;
+    transition: 0.2s;
+    min-width: 222px;
+}
+
+.btn-site:hover {
+    opacity: 1;
+    color: #fff;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.56);
+}
+
+.btn-site span {
+    border-radius: 50%;
+    background-color: #fff;
+    width: 57px;
+    height: 57px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.4s;
+}
+
+.btn-site span img {
+    max-width: 31px;
+}
 
 /* start header style */
 header {
@@ -245,6 +281,7 @@ header {
 .home__about-content p {
     font-size: 24px;
     color: #5C5C5C;
+    margin-bottom: 50px;
 }
 
 .home__about-video {
@@ -382,7 +419,7 @@ header {
     border-radius: 12px;
     padding: 16px;
     position: relative;
-    margin-bottom: 40px;
+    height: 100%;
 }
 
 .view__number {
@@ -423,6 +460,15 @@ header {
     align-items: center;
     gap: 10px;
     justify-content: space-between;
+}
+ 
+.order__item .desc {
+    font-size: 14px;
+    color: #464646;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .order__item .title h3 a {
@@ -482,3 +528,94 @@ header {
     max-width: 12px;
 }
 
+.video-ytb__item {
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.video-ytb__item img {
+    border-radius: 16px;
+}
+
+.home-banner__link {
+    width: 100%;
+    margin-top: 58px;
+}
+
+.home-banner__link img {
+    height: 212px;
+    object-fit: cover;
+}
+
+.new__item {
+    border-radius: 0px;
+}
+
+.new__item-calender {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 14px;
+    color: #3D3D3D;
+}
+
+.new__item_bt .view__number {
+    position: static;
+}
+
+.new__banner {
+    width: 100%;
+    background-image: url(../images/banner-img-02.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.new__banner a.btn-site {
+    position: relative;
+    z-index: 2;
+    text-transform: inherit;
+}
+
+.new__banner::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background: #01036AB5;
+}
+
+.row.row-gap-ct {
+    row-gap: 36px;
+}
+
+.st-contact {
+    background-image: url(../images/home-contact-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    padding: 75px 0px;
+}
+
+.st-contact .container {
+    position: relative;
+    z-index: 2;
+}
+
+.st-contact::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    left: 0px;
+    height: 100%;
+    top: 0px;
+    background: #010369B5;
+}
